# puda-palafito

./: .editorconfig  .env.sample  .gitignore  AGENTS.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  web-ext.config.ts  wxt.config.ts
2026-03-WebExt/: .gitignore  CLAUDE.md  pnpm-lock.yaml
2026-03-WebExt/src/: constants.ts
assets/icon/: README.txt
browsing-memory/: README.md
browsing-memory/browser-ext/: .gitignore  LICENSE  README.md  package-lock.json  package.json  webpack.config.js
browsing-memory/mcp/: README.md  browsing-memory.mcpb  manifest.json
browsing-memory/web-clipper/: package.json
dev/: sensitive-info-test.html
docs/: gems-guide.md  google-drive-api-setup.md
gems-prototype/: .env.sample  biome.json  open-chrome-dev.bat  package.json  pnpm-lock.yaml
gems-prototype/docs/: gems-guide.md  user-guide.md
gems-prototype/public/: resize.ps1
gems-prototype/src/: env.d.ts
gems-prototype/tests/: test-privacy.html
mcp/: Memo.md
mcp/webclip-search/: README.md  manifest.json  pyproject.toml  webclip-search.mcpb
mcp/webclip-search/src/webclip_search/: __init__.py  chunker.py  frontmatter_fields.py  semantic_index.py  server.py
scripts/: README.md  crawl.ts  extract-urls.js  make-grayscale.js
src/: constants.ts  env.d.ts
src/entrypoints/: background.ts  content.ts
src/lib/: date.ts  domain-filter.test.ts  domain-filter.ts  example.test.ts  icon.ts  page-visit-detection.ts  runtime-bridge.ts  (+6 more)
web-clipper/: AGENTS.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
(+193 files in other folders)
