[project]
name = "webclip-search"
version = "0.1.0"
description = "MCP server to search Obsidian WebClip files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
webclip-search = "webclip_search.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webclip_search"]
